[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Yotam Kanny"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
sqlx = "0.7.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
